--- a/schedule_core/requirements.txt
+++ b/schedule_core/requirements.txt
@@ -3,7 +3,7 @@ aioredis==1.3.1
 aiosignal==1.3.1
 amqp==5.1.1
 asgiref==3.7.2
-astroid==3.0.2
+astroid==2.15.8
 async-timeout==4.0.3
 attrs==23.1.0
 autobahn==23.6.2
@@ -35,12 +35,15 @@ Django==4.2.6
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==4.2.0
+django-decouple==2.1
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.0
 docutils==0.20.1
 drf-yasg==1.21.7
+flake8==6.1.0
+flake8-django==1.4
 flower==2.0.1
 frozenlist==1.4.1
 future==0.18.3
@@ -87,6 +90,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
 pycparser==2.21
+pyflakes==3.1.0
 Pygments==2.17.2
 PyJWT==1.7.1
 pylint==3.0.3
